k8s/store.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kkpd-store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kkpd-store.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kkpd-store-service
                port:
                  number: 80
